<resources>
    <string name="app_name">Digifit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_diary">Diary</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_settings">Achievements</string>
    <string name="menu_achievements">Leaderboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="fullscreen_mode">Fullscreen</string>
    <string name="turn_on_flash">Bind flash</string>
    <string name="lock_code_reader">Tracking code reader</string>
    <string name="info">Information</string>
    <string name="info_description">Position the camera on the barcode correctly.</string>
    <string name="last_content_read">Last barcode read:</string>
    <string name="nothing_read">Nothing has been read</string>
    <string name="barcode_format">Barcode Format: </string>
    <string name="clear_content_read">Clean content area</string>
    <string name="open_url">Open URL</string>
    <string name="close_fullscreen_mode">Exit fullscreen</string>
    <string name="open_email">Open Email</string>
    <string name="open_call">Open call</string>
    <string name="request_permission_description">Camera permission is needed to use this app</string>
    <string name="request_permission_button_ok">Ok</string>
    <string name="request_permission_button_cancel">Cancel</string>
    <string name="unrecognized_code">Unregonised Barcode</string>

</resources>

