<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.digigit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.digigit.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.digigit.ui.progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/nav_achievements"
        android:name="com.example.digigit.ui.share.ShareFragment"
        android:label="@string/menu_achievements"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.digigit.ui.slideshow.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
    
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.digigit.ui.tools.ToolsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.digigit.ui.achievements.achieveFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.digigit.ui.progress.ProgressFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_progress" />
</navigation>